; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/fnic/extr_fnic_isr.c_fnic_clear_intr_mode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/fnic/extr_fnic_isr.c_fnic_clear_intr_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fnic = type { i32, i32 }

@VNIC_DEV_INTR_MODE_INTX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fnic_clear_intr_mode(%struct.fnic* %0) #0 {
  %2 = alloca %struct.fnic*, align 8
  store %struct.fnic* %0, %struct.fnic** %2, align 8
  %3 = load %struct.fnic*, %struct.fnic** %2, align 8
  %4 = getelementptr inbounds %struct.fnic, %struct.fnic* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @vnic_dev_get_intr_mode(i32 %5)
  switch i32 %6, label %17 [
    i32 128, label %7
    i32 129, label %12
  ]

7:                                                ; preds = %1
  %8 = load %struct.fnic*, %struct.fnic** %2, align 8
  %9 = getelementptr inbounds %struct.fnic, %struct.fnic* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @pci_disable_msix(i32 %10)
  br label %18

12:                                               ; preds = %1
  %13 = load %struct.fnic*, %struct.fnic** %2, align 8
  %14 = getelementptr inbounds %struct.fnic, %struct.fnic* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @pci_disable_msi(i32 %15)
  br label %18

17:                                               ; preds = %1
  br label %18

18:                                               ; preds = %17, %12, %7
  %19 = load %struct.fnic*, %struct.fnic** %2, align 8
  %20 = getelementptr inbounds %struct.fnic, %struct.fnic* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @VNIC_DEV_INTR_MODE_INTX, align 4
  %23 = call i32 @vnic_dev_set_intr_mode(i32 %21, i32 %22)
  ret void
}

declare dso_local i32 @vnic_dev_get_intr_mode(i32) #1

declare dso_local i32 @pci_disable_msix(i32) #1

declare dso_local i32 @pci_disable_msi(i32) #1

declare dso_local i32 @vnic_dev_set_intr_mode(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
